--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,7 @@
 # gem 'pg'
 #
 default: &default
+  host: localhost
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -24,7 +25,7 @@ default: &default
 development:
   <<: *default
   database: ieat_development
-  username: postgres
+  username: nathan
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
